--- a/package.json
+++ b/package.json
@@ -10,19 +10,12 @@
     "xcodelog-to-md": "bin/xcodelog-to-md.js"
   },
   "dependencies": {
-    "chalk": "^2.4.2",
-    "clear": "^0.1.0",
-    "js-yaml": "^3.14.0",
     "commander": "^5.1.0",
-    "figlet": "^1.5.0",
-    "line-reader": "^0.4.0",
-    "pkginfo": "^0.4.1",
-    "rc": "^1.2.8"
+    "line-reader": "^0.4.0"
   },
   "devDependencies": {
-    "eslint": "^6.5.1",
-    "eslint-config-google": "^0.14.0",
-    "eslint-config-prettier": "^6.5.0"
+    "eslint": "^8.12.0",
+    "eslint-config-prettier": "^8.5.0"
   },
   "scripts": {
     "lint": "eslint $(find . -name \"*.js\" -not -path \"./node_modules/*\" -not -path \"./public/*\")",
